--- a/index.html
+++ b/index.html
@@ -152,9 +152,15 @@ pre code {
 
 <h4>01-28-2013 -- Brooks Video</h4>
 
-<p><em>00:00 WSOM Design Requirements Workshop .. what is it? what is WSOM? What are “design requirements?:</em></p>
+<ol>
+<li><p><em>00:00 WSOM Design Requirements Workshop .. what is it? what is WSOM? What are “design requirements?:</em></p>
 
-<p>00:00 Case Western University .. what is it and where is it?</p>
+<p> WSOM is the Weatherhead School of Management at Case. Design requirements are a list of requirements that a design must satisfy. They're usually part of a contract with a client. Example: the car must get 45 MPG on the highway.</p></li>
+<li><p><em>00:00 Case Western University .. what is it and where is it?</em></p>
+
+<p> Case Western is in Cleveland. It's mostly known for it's medical school and nursing school. Engineering is also strong there. They're also famous for the Michelson Morley experiment which measured the speed of light. I actually went there for two years as a physics major. It's cold.</p></li>
+</ol>
+
 
 <p>00:10 someone said “take one out of the bank” .. Collie? Callie? Kalli? Who is this person</p>
 
@@ -231,5 +237,19 @@ pre code {
 <p>09:45 “now part of rockwell” .. who are they? what do they do?</p>
 
 <p>10:30 “out of my gored? gord?” .. what is that word? what does it mean?</p>
+
+<h3>01-27-2013 -- DoD Ch. 1-3</h3>
+
+<h5><em>Chapter 1</em></h5>
+
+<p>In chapter one, Brooks frames the book by giving a few definitions and setting out the major questions he's trying to answer. Design is, informally, the plan of action or "mental formulation" of some thing that needs to be created or implemented. The "design concept" is a little vague, but appears to be a set of very high level desiderata; maybe things like "simplicity." This seems to of use primarily as an organizing principle for communication between designers. The book is primarily about the generality of design approaches across different disciplines, and is focused on what he calls "original design" as opposed to iterations or modifications of existing designs. I'm not sure how much actual work gets done from scratch like that.</p>
+
+<h5><em>Chapter 2</em></h5>
+
+<p>Chapter two is mostly about "The Rational Model," or formal approaches based on things like decision trees or the waterfall approach. These are attempts to provide direction to the design process. As such they are useful, but attempting to use them as a recipe is probably a mistake. The waterfall is too rigid and the problem space is usually too large to tackle with a decision tree.</p>
+
+<h5><em>Chapter 3</em></h5>
+
+<p>Clearly the models from chapter 2 don't really work very well in practice. One problem is the need for formal requirements up front. This is rarely available. Additionally, you can never be sure of the impact of any given design decision until after you've finished. Decisions are inter-related, and those relationships are not always well defined. Constraints can also change during the process. A better approach would take into account the iterative nature of design. There probably isn't an approach that would make everyone happy, but even a flawed system might prove useful.</p>
 </body>
 </html>
