more work on the trivia part of the assignment

--- a/index.html
+++ b/index.html
@@ -159,36 +159,51 @@ pre code {
 <li><p><em>00:00 Case Western University .. what is it and where is it?</em></p>
 
 <p> Case Western is in Cleveland. It's mostly known for it's medical school and nursing school. Engineering is also strong there. They're also famous for the Michelson Morley experiment which measured the speed of light. I actually went there for two years as a physics major. It's cold.</p></li>
+<li><p><em>00:10 someone said “take one out of the bank” .. Collie? Callie? Kalli? Who is this person</em></p>
+
+<p>Probably Kalle Lyytinen, a CWRU faculty member who has published about design requirements.</p></li>
+<li><p><em>00:17 “.. award lecture from some seven years ago ” .. what award? who is it named for? who gives the award? why did Brooks receive the award?</em></p>
+
+<p> The Turing award (named after Alan Turing)is given by the ACM and is considered by most to be the "Nobel prize" of CS. Brooks won both for his work at IBM and the writing he's done on software engineering.</p></li>
+<li><p><em>00:45 what is this talk about?</em></p>
+
+<p> "the design process"</p></li>
+<li><p><em>00:50 “oxford english dictionary” .. what is it? when was it written?</em></p>
+
+<p> The OED is generally considered the authoritative dictionary of the English language. The original version had its last volume published in 1928. There have since been many revisions.</p></li>
+<li><p><em>00:51 what is the definition of “design”?</em></p>
+
+<p> Thanks to the UTK Library: <br/>
+"a.  (a) To make drawings for the construction or creation of (something, as a building, object, garment, etc.) according to certain aesthetic criteria;  (b) to make plans for the production of (a device, product, etc.) according to structural or functional criteria (sometimes without the implication of aesthetic requirements);  (c) (in extended use) to conceive, devise, plan (something immaterial, as a scheme, system, programme, etc.)."</p></li>
+<li><p><em>01:00 “vernacular” .. what does it mean?</em></p>
+
+<p> vernacular is the native or local language of a place</p></li>
+<li><p><em>01:02 “odd hoak?” .. what is he saying? what does it mean?</em></p>
+
+<p> something done ad hoc is done quickly and directly for one specific use/purpose. It's not something general or particularly well planned</p></li>
+<li><p><em>01:17 “comes from Mozart” .. who is Mozart?</em></p>
+
+<p> Mozart was a composer from the classical period</p></li>
+<li><p><em>01:21 “three weeks before an opera was due” .. what opera? what does it sound like?</em></p>
+
+<p>Idomeneo. I've not heard it much, but I know I like Don Giovanni and Figaro better.</p></li>
+<li><p><em>01:24 “his father Leopold” .. who was Leopold? what did he do?</em></p>
+
+<p>Leopold was Mozart's father. He was a composer and music teacher. More the latter than the former.</p></li>
+<li><p><em>01:29 “due to the duke” .. what duke? duke of where? what is a “duke”? why was an opera due to the duke?</em></p>
+
+<p>According to wikipedia Idomeneo was commissioned by someone named Karl Theodore, the Duke of Bavaria</p></li>
+<li><p><em>1:30 what did Mozart tell his father regarding the (design of the) opera?</em></p>
+
+<p>Mozart claimed that it was already composed, he just hadn't written it down yet. This was almost certainly untrue.</p></li>
+<li><p><em>2:00 “why study the design process per se” .. what is “per se”? what is a “design process”? why study it?</em></p>
+
+<p>per se means through itself in latin.</p></li>
 </ol>
 
 
-<p>00:10 someone said “take one out of the bank” .. Collie? Callie? Kalli? Who is this person</p>
-
-<p>00:17 “.. award lecture from some seven years ago ” .. what award? who is it named for? who gives the award? why did Brooks receive the award?</p>
-
-<p>00:45 what is this talk about?</p>
-
-<p>00:50 “oxford english dictionary” .. what is it? when was it written?</p>
-
-<p>00:51 what is the definition of “design”?</p>
-
-<p>01:00 “vernacular” .. what does it mean?</p>
-
-<p>01:02 “odd hoak?” .. what is he saying? what does it mean?</p>
-
-<p>01:17 “comes from Mozart” .. who is Mozart?</p>
-
-<p>01:21 “three weeks before an opera was due” .. what opera? what does it sound like?</p>
-
-<p>01:24 “his father Leopold” .. who was Leopold? what did he do?</p>
-
-<p>01:29 “due to the duke” .. what duke? duke of where? what is a “duke”? why was an opera due to the duke?</p>
-
-<p>01:30 what did Mozart tell his father regarding the (design of the) opera?</p>
-
-<p>02:00 “why study the design process per se” .. what is “per se”? what is a “design process”? why study it?</p>
-
-<p>02:24 “Francis Bacon” .. who is this person? what did he say? what did he do?</p>
+<p>0
+2:24 “Francis Bacon” .. who is this person? what did he say? what did he do?</p>
 
 <p>02:45 what disciplines have contributed to the theory of design?</p>
 
