done with brooks video

--- a/index.html
+++ b/index.html
@@ -198,60 +198,84 @@ pre code {
 <p>Mozart claimed that it was already composed, he just hadn't written it down yet. This was almost certainly untrue.</p></li>
 <li><p><em>2:00 “why study the design process per se” .. what is “per se”? what is a “design process”? why study it?</em></p>
 
-<p>per se means through itself in latin.</p></li>
+<p>per se means through itself in latin. The design process is the process by which design is done. studying it will hopefully improve design, and make it easier to teach</p></li>
+<li><p><em>2:24 “Francis Bacon” .. who is this person? what did he say? what did he do?</em></p>
+
+<p>Sir Francis Bacon was a major proponent of an empirical approach to science, which set him apart from the adherents of the older, more thought experiment based "philosopher" types. Bacon believed in investigation by experiment</p></li>
+<li><p><em>02:45 what disciplines have contributed to the theory of design?</em></p>
+
+<p>mechanical engineering, architecture and industrial engineering</p></li>
+<li><p><em>3:00 According to Brooks, what is new about design in the 21st century when we compare it to classical design in the 19th century?</em></p>
+
+<p>Modern design is done by teams, not by individuals</p></li>
+<li><p><em>3:40 “ford” .. who is ford? what did he design?</em></p>
+
+<p>Probably Henry Ford, who was the pioneer of the assembly line, or construction of complex things by teams of people by dividing up the labor</p></li>
+<li><p><em>3:41 stevenson? stephensen?  .. who is this person? what did he design?</em></p>
+
+<p>Not sure, apparently there was an engineer named stephenson who worked on railways</p></li>
+<li><p><em>3:41 “edison?” who is that? what did he design?</em></p>
+
+<p>Probably thomas edison, who designed lots of things</p></li>
+<li><p><em>03:46 bruno leshi? bruun aleshi? .. who is this person? what did he design?</em></p>
+
+<p>Brunelleschi was an architect during the renaissance. He designed buildings and ships</p></li>
+<li><p><em>3:51 christopher rinn? rynne? .. who is this person? what did he design?</em></p>
+
+<p>Christopher Wren was an 17th century English architect, mostly known for St. Paul's Cathedral</p></li>
+<li><p><em>4:29 what is wrong with raising the level of the design practice?</em></p>
+
+<p>Nothing, you make the worst better, thereby improving the average, which is worthwhile</p></li>
+<li><p><em>04:45 what is exciting about the process of design?</em></p>
+
+<p>According to Brooks, raising the ceiling of practice, which I assume means making better designs possible</p></li>
+<li><p><em>5:00 “the sciences of the artificial” .. what is it?</em></p>
+
+<p>A book by herb simon</p></li>
+<li><p><em>5:05 herb simons? .. who is he?</em></p>
+
+<p>He was a professor at CMU. The sciences of the artificial was apparently about developing a scientific process for decision making</p></li>
+<li><p><em>5:10 “desiderata” .. what is that?</em></p>
+
+<p>desiderata are things you want in your design, desired features/outcomes</p></li>
+<li><p><em>5:15 “utility function” .. what is that?</em></p>
+
+<p>I think this is like a fitness function, some way to quantitatively judge the fitness or utility of a design</p></li>
+<li><p><em>5:30 “critical budget” .. what is that?</em></p>
+
+<p>This is the most limiting constraint which you balance against your desiderata</p></li>
+<li><p><em>6:20 “design tree” .. what is that?</em></p>
+
+<p>The tree that would be formed if you consider each design decision as a branch point with competing final designs at each leaf</p></li>
+<li><p><em>6:25 “mono-rooted” .. what is that? what would you call a non-mono-rooted tree?</em></p>
+
+<p>I assume he means that all the possible designs start with a single decision at the top of the tree. A multi-rooted tree?</p></li>
+<li><p><em>7:45 “engineer’s model” .. what is it?</em></p>
+
+<p>Depth first search along the design tree to find a maxima for the utility function</p></li>
+<li><p><em>8:25 “so much for the straw man” .. what is a straw man? what straw man is he talking about?</em></p>
+
+<p>a straw man is a clearly flawed argument that is falsely attributed to an opponent, usually because his actual argument is harder to find fault with. He's talking about the engineer's model</p></li>
+<li><p><em>8:27 “what’s wrong with this model” .. with </em>what<em> model? and what’s actually wrong with it?</em></p>
+
+<p>the engineer's model. It assumes you know the goals up front, which is rarely the case. You also have a huge combinatorial problem trying to evaluate a fitness function at all possible leaves in the design tree</p></li>
+<li><p><em>9:15 what’s the hardest thing about designing complex systems?</em></p>
+
+<p>knowing what to design</p></li>
+<li><p><em>9:20 “eliciting requirements” .. what is “eliciting”?</em></p>
+
+<p>eliciting is getting something from someone</p></li>
+<li><p><em>9:42 “north american aviation” .. who are they? what do they do?</em></p>
+
+<p>They were an airplace manufacturer. Apparently they are part of Boeing now</p></li>
+<li><p><em>9:45 “now part of rockwell” .. who are they? what do they do?</em></p>
+
+<p>They no longer exist, but were a large manufacturing company</p></li>
+<li><p><em>0:30 “out of my gored? gord?” .. what is that word? what does it mean?</em></p>
+
+<p>a gourd is a vegetable with a shell. "out of his gourd" is another way of saying crazy or "out of his mind"</p></li>
 </ol>
 
-
-<p>0
-2:24 “Francis Bacon” .. who is this person? what did he say? what did he do?</p>
-
-<p>02:45 what disciplines have contributed to the theory of design?</p>
-
-<p>03:00 According to Brooks, what is new about design in the 21st century when we compare it to classical design in the 19th century?</p>
-
-<p>03:40 “ford” .. who is ford? what did he design?</p>
-
-<p>03:41 stevenson? stephensen?  .. who is this person? what did he design?</p>
-
-<p>03:41 “edison?” who is that? what did he design?</p>
-
-<p>03:46 bruno leshi? bruun aleshi? .. who is this person? what did he design?</p>
-
-<p>03:51 christopher rinn? rynne? .. who is this person? what did he design?</p>
-
-<p>04:29 what is wrong with raising the level of the design practice?</p>
-
-<p>04:45 what is exciting about the process of design?</p>
-
-<p>05:00 “the sciences of the artificial” .. what is it?</p>
-
-<p>05:05 herb simons? .. who is he?</p>
-
-<p>05:10 “desiderata” .. what is that?</p>
-
-<p>05:15 “utility function” .. what is that?</p>
-
-<p>05:30 “critical budget” .. what is that?</p>
-
-<p>06:20 “design tree” .. what is that?</p>
-
-<p>06:25 “mono-rooted” .. what is that? what would you call a non-mono-rooted tree?</p>
-
-<p>07:45 “engineer’s model” .. what is it?</p>
-
-<p>08:25 “so much for the straw man” .. what is a straw man? what straw man is he talking about?</p>
-
-<p>08:27 “what’s wrong with this model” .. with <em>what</em> model? and what’s actually wrong with it?</p>
-
-<p>09:15 what’s the hardest thing about designing complex systems?</p>
-
-<p>09:20 “eliciting requirements” .. what is “eliciting”?</p>
-
-<p>09:42 “north american aviation” .. who are they? what do they do?</p>
-
-<p>09:45 “now part of rockwell” .. who are they? what do they do?</p>
-
-<p>10:30 “out of my gored? gord?” .. what is that word? what does it mean?</p>
 
 <h3>01-27-2013 -- DoD Ch. 1-3</h3>
 
