forgot to push ch. 4 and 5, sent now

--- a/index.html
+++ b/index.html
@@ -150,6 +150,16 @@ pre code {
 <body>
 <h1>Senior Design Weblog</h1>
 
+<h4>02-02-2013 --DoD Ch. 4-5</h4>
+
+<h5><em>Chapter 4</em></h5>
+
+<p>Chapter four is largely about the requirements part of the design process. Brooks points out problems with the typical process of laying out requirement: that there are usually too many of them and that they aren't prioritized which makes decision making by engineers more difficult. If there are no weightings on requirements and the constraints don't allow for all of them to be satisfied, how do you decide which to satisfy and which to ignore? There should be fewer, more general requirements and there should be some individual who makes the ultimate decisions on them. Unfortunately, the need for work to be done by contract complicates this, and there's no perfect solution despite the suggestion to contract the design and implementation seperately.</p>
+
+<h5><em>Chapter 5</em></h5>
+
+<p>Chapter 5 is about replacing the waterfall model. First Brooks argues that there needs to be a single, teachable model to replace the waterfall. He likes the spiral model, but would like for the interaction between designer and user to be more formally specified as a series of points on the spiral where contracts can be made. He talks a while about open source as a design model, but that is of clearly limited application. You can't open source an electron microscope since building them and using them are two different skillsets and two different groups of people.</p>
+
 <h4>01-28-2013 -- Brooks Video</h4>
 
 <ol>
