--- a/index.html
+++ b/index.html
@@ -150,6 +150,21 @@ pre code {
 <body>
 <h1>Senior Design Weblog</h1>
 
+<hr />
+
+<h4>02-03-2013 -- Project Ideas</h4>
+
+<ul>
+<li>Michael Chang's Morphology project: <a href="http://users.design.ucla.edu/~mflux/morphology/">http://users.design.ucla.edu/~mflux/morphology/</a></li>
+<li>Along those lines, just about anything on the Processing multimedia programming language's web page:
+<a href="http://www.processing.org/exhibition/">http://www.processing.org/exhibition/</a></li>
+<li>PLOrk: <a href="http://plork.cs.princeton.edu/">http://plork.cs.princeton.edu/</a></li>
+<li>Wolfram's algorithmic music: <a href="http://tones.wolfram.com/generate/">http://tones.wolfram.com/generate/</a></li>
+<li>Projects like CellSlider: <a href="http://www.cellslider.net/">http://www.cellslider.net/</a></li>
+<li>and WhaleFM: <a href="http://whale.fm/">http://whale.fm/</a></li>
+</ul>
+
+
 <h4>02-02-2013 --DoD Ch. 4-5</h4>
 
 <h5><em>Chapter 4</em></h5>
@@ -159,6 +174,8 @@ pre code {
 <h5><em>Chapter 5</em></h5>
 
 <p>Chapter 5 is about replacing the waterfall model. First Brooks argues that there needs to be a single, teachable model to replace the waterfall. He likes the spiral model, but would like for the interaction between designer and user to be more formally specified as a series of points on the spiral where contracts can be made. He talks a while about open source as a design model, but that is of clearly limited application. You can't open source an electron microscope since building them and using them are two different skillsets and two different groups of people.</p>
+
+<hr />
 
 <h4>01-28-2013 -- Brooks Video</h4>
 
