pushing new techs

--- a/index.html
+++ b/index.html
@@ -152,6 +152,17 @@ pre code {
 
 <hr />
 
+<h4>02-05-2013 -- Research Lab Stuff</h4>
+
+<ul>
+<li>Google does awesome stuff, like there testing framework, <a href="https://code.google.com/p/googletest/">google test</a></li>
+<li>Microsoft Research is also great, with both software like their PGM/machine learning library <a href="http://research.microsoft.com/en-us/um/cambridge/projects/infernet/">Infer.NET</a>, and data like their spelling correction set: <a href="http://research.microsoft.com/en-us/downloads/4eb8d4a0-9c4e-4891-8846-7437d9dbd869/">spell correct data</a></li>
+<li>Samsung's <a href="https://www.google.com/url?sa=t&amp;rct=j&amp;q=&amp;esrc=s&amp;source=web&amp;cd=7&amp;cad=rja&amp;ved=0CGwQtwIwBg&amp;url=http%3A%2F%2Fwww.telegraph.co.uk%2Ftechnology%2Fces%2F9792166%2FCES-2013-Samsung-flexible-phone-prototype-unveiled.html&amp;ei=rokSUcvAJoHC9QTJjIG4Aw&amp;usg=AFQjCNFA3GpATerBWCt4iLgr-F-6sKF2tQ&amp;sig2=KXhdbUGy2MDkKdz7kvNcbQ">flexible oled displays</a> are pretty cool</li>
+<li>The UK Ministry of Defense has shown palm sized <a href="https://www.gov.uk/government/news/miniature-surveillance-helicopters-help-protect-front-line-troops">helicopter drones</a>. Some has already started selling <a href="http://www.bitcraze.se/">"nano-copters"</a></li>
+<li>Some guys at the University of Tokyo published a paper about a smell tracking robot <a href="http://iopscience.iop.org/1748-3190/8/1/016008">piloted by a moth</a></li>
+</ul>
+
+
 <h4>02-03-2013 -- Project Ideas</h4>
 
 <ul>
