DoD ch. 6 and 7

--- a/index.html
+++ b/index.html
@@ -152,6 +152,18 @@ pre code {
 
 <hr />
 
+<h4>02-08-2013 -- DoD Ch. 6-7</h4>
+
+<h5><em>Chapter 6</em></h5>
+
+<p>Chapter 6 is about the move from design by individual to design by teams. He suggests that most great "design" has previously been the work of individuals. He claims that we do team design now because designs are more complicated and need to be completed more quickly. The challenges this brings are around division of labor and syncing the team. Everyone must share the same knowledge to work on the design. He goes on at length about the idea of "conceptual integrity". While collaboration on a design does have some benefits, Brooks thinks that a single person must, in the end, be in charge. His job would be to maintain this "conceptual integrity". He also talks about design reviews, where the team of collaborators meet and and share their work with each other. Brooks is high on two man teams, probably the source of all the "pair programming" methodologies that are popular right now.</p>
+
+<h5><em>Chapter 7</em></h5>
+
+<p>Chapter 7 is about collaboration by workers/designers who aren't in the same room. This is a strange topic to cover since the limits here are mostly technological and change rapidly. There's a talk about how important interfaces/apis/encapsulation are. This is well accepted. This chapter felt dated despite being published in 2010. The tools are much better these days… that and I personally think face to face interaction may be overvalued.</p>
+
+<hr />
+
 <h4>02-05-2013 -- Research Lab Stuff</h4>
 
 <ul>
@@ -163,6 +175,8 @@ pre code {
 <li>Researchers at Harvard have developed a new fiber that <a href="http://www.seas.harvard.edu/news-events/press-releases/bioinspired-fibers-change-color-when-stretched">changes color when stretched</a></li>
 </ul>
 
+
+<hr />
 
 <h4>02-03-2013 -- Project Ideas</h4>
 
@@ -176,6 +190,8 @@ pre code {
 <li>and WhaleFM: <a href="http://whale.fm/">http://whale.fm/</a></li>
 </ul>
 
+
+<hr />
 
 <h4>02-02-2013 --DoD Ch. 4-5</h4>
 
@@ -315,6 +331,8 @@ pre code {
 <p>a gourd is a vegetable with a shell. "out of his gourd" is another way of saying crazy or "out of his mind"</p></li>
 </ol>
 
+
+<hr />
 
 <h3>01-27-2013 -- DoD Ch. 1-3</h3>
 
