--- a/index.html
+++ b/index.html
@@ -152,6 +152,14 @@ pre code {
 
 <hr />
 
+<h4>02-18-2013 -- DoD Ch. 10</h4>
+
+<h5><em>Chapter 10</em></h5>
+
+<p>Chapter 10 is about constraints. Brooks points out that money isn't always the only constraint on a project, others can be governed by the available technology, and are thus changing. Constraints should be laid out explicitly early on and managed tightly by one person. Establishing the right constraints can have a strong impact on a design.</p>
+
+<hr />
+
 <h4>02-15-2013 -- DoD Ch. 8-9</h4>
 
 <h5><em>Chapter 8</em></h5>
