--- a/index.html
+++ b/index.html
@@ -152,6 +152,19 @@ pre code {
 
 <hr />
 
+<h4>02-20-2013 -- DoD Ch. 11-12</h4>
+
+<h5><em>Chapter 11</em></h5>
+
+<p>Constraints are part of what drive design. Contraints should be current, and accurately understood. They can make design easier by narrowing the solution space… General designs carry fewer constraints and therefore more options and complexity.</p>
+
+<h5><em>Chapter 12</em></h5>
+
+<p>Chapter twelve is about design aesthetics. Brooks believes an aesthetically pleasing design combines simplicity with power. He thinks you should be able to see some basic structure and guiding principles in the design. He goes on to talk about his version of the
+'principle of least surprise'. The design should be self consistent. It should also be both modular and general. He then goes on for a while about consistency on details making design easier. The way to achieve that consistency is through documentation.</p>
+
+<hr />
+
 <h4>02-18-2013 -- DoD Ch. 10</h4>
 
 <h5><em>Chapter 10</em></h5>
