--- a/index.html
+++ b/index.html
@@ -152,15 +152,27 @@ pre code {
 
 <hr />
 
+<h4>03-11-2013 DoD. Ch. 15-16</h4>
+
+<h5><em>Chapter 15</em></h5>
+
+<p>If the something is being designed for someone else to use, the person making that thing should talk to the person who will be using it. Ideally, users should be able to shape the product while it's being designed.</p>
+
+<h5><em>Chapter 16</em></h5>
+
+<p>Processes are difficult to document. It's hard to force a lot of concurrent and/or interrelated things into a single linear, sequential narrative. Brooks seems to want to put the entire "decision tree" into writing. He talks a bit about trying to keep decisions independent from each other, and how he saw it as an issue while documenting his house project. Then he talks for a while about some software tools for doing this documentation that he has used.</p>
+
+<hr />
+
 <h4>03-01-2013 DoD Ch. 13-14</h4>
 
 <h5><em>Chapter 13</em></h5>
 
-<p>Designs are usually influenced by some earlier example. Sometimes they are just new features added onto older designs. Brooks seems to like design patterns. He also says that there is more to be learned from the challenges facing earlier designers and their approach to them than their actual designs/solutions. Brooks thinks that careful cataloging and critique of earlier designs would be useful. I personally think this is a programming languages theory problem rather than an empirical/engineering problem. I'm persuaded by Alan Kay's argument that we program they way architects designed buildings before the discovery of the arch. I think all the design patterns in the world aren't enough to fix this. Obviously looking at previous examples is better than not. That seems to be the thrust of this chapter.</p>
+<p>Designs are usually influenced by some earlier example. Sometimes they are just new features added onto older designs. Brooks seems to like design patterns. He also says that there is more to be learned from the challenges facing earlier designers and their approach to them than their actual designs/solutions. Brooks thinks that careful cataloging and critique of earlier designs would be useful.</p>
 
 <h5><em>Chapter 14</em></h5>
 
-<p>So far it looks like he's going to talk about fads in computer science… the "pop culture" and forgetting what got us here. I hope so anyway. Nope, he's talking about blind faith in received wisdom. That's much less interesting. Apparently JCL was a bad language. Apparently it was designed too narrowly because the designers mispredicted what people would be doing with it.</p>
+<p>Blind faith in received wisdom is bad. Apparently JCL was a bad language. It was designed too narrowly because the designers mispredicted what people would be doing with it.</p>
 
 <hr />
 
