DoD ch. 17 and 18

--- a/index.html
+++ b/index.html
@@ -152,6 +152,18 @@ pre code {
 
 <hr />
 
+<h4>03-21-2013 DoD. Ch. 17-18</h4>
+
+<h5><em>Chapter 17</em></h5>
+
+<p>Brooks starts off this chapter proposing to design a system for architectural design. It should start with a complete design and then modify it to fit what the designer wants. A good set of initial exemplats is important. Brooks goes into detail on the interface… voice command, nouns, verbs and adverbs, 3d vs. 2d, etc. He talks for a while about the system for moving the viewpoint aroudn when visualizing the design.</p>
+
+<h5><em>Chapter 18</em></h5>
+
+<p>Chapter 18 focuses on the architecture system's visualization options. The focus is on visual representation, with multiple monitors. While 2d display is easiest to work with and 2d objects are easiesto manipulate, a 3d representation is important. It's aso important to have text specifications easily viewable/available. Brooks believes his system is buildable now, incrementally.</p>
+
+<hr />
+
 <h4>03-11-2013 DoD. Ch. 15-16</h4>
 
 <h5><em>Chapter 15</em></h5>
