--- a/index.html
+++ b/index.html
@@ -152,6 +152,36 @@ pre code {
 
 <hr />
 
+<h4>04-19-2013 ABET</h4>
+
+<h4>Question 1</h4>
+
+<p>It’s hard to imagine an area of science, government or industry that hasn’t been touched by electronic computation. Computers have given us the ability to apply mathematical models to systems that had previously been considered to be too complex to analyze.  Examples of this include computational biology and weather forecasting.  This question is pretty trite, and pretty unclear. How could we not have computation? Are we just referring to electronic computers, or are we talking about any kind of computer? I’ll assume we’re just talking about electronic computers. A lot of these things would be possible without them, but far more difficult.</p>
+
+<p>I’ll just rattle off places you find computers. To start with, we wouldn’t have the internet without them. No internet means far more difficult communication. Most cars and planes have some sort of computerized control. My oven has a small microcontroller in it. I wouldn’t be typing this right now without this computer either.</p>
+
+<p>Computers largely control the stock market these days, although I don’t know if that’s good or bad. Computers have also been instrumental in designing new drugs and medications.  All of our media is basically produced digitally via computer now. That includes music, movies, television and software. Of course, without computers you wouldn’t have software in the first place.</p>
+
+<p>I’m going to try to make this at least a little worthwhile and talk about something I read in an interview with Alan Kay recently. He said that software engineering today is like architecture before the development of the arch. I think you can liken it to the pre-industrial era as well. The analogy is that, before the arch, if you wanted to build a large structure, you basically did that by accretion. You got a bunch of people, usually slaves, and just had them pile bricks on each other until the building was as high as you wanted it to be. You could pretend that there was design there, but really it was unknowably complex and built as a huge collection of really small pieces.</p>
+
+<p>Once the arch was discovered, suddenly you could build equivalently large structures with far fewer materials, using far less labor and far more quickly. It also enabled a much wider array of designs, since you had more freedom, and fewer, more skilled laborers could work together better. The arch made all the difference in the world.</p>
+
+<p>Software engineering still has no arch. All the new technologies that come out seem to be designed to make it easier for the army of low skill developers to assemble the next huge project like Microsoft Word.  The worst part of it all is that since building these huge, messy systems takes so long and is so expensive, that they continue to grow by accretion in perpetuity. Will Microsoft ever scrap Word and start from scratch on a new word processor? Probably not. Even if they did it would be built the same way, so there’s little reason to believe it would be any better.</p>
+
+<h4>Question 2</h4>
+
+<p>Well, I hope to learn for a living personally. Ideally I’d like to work for a company that does actual computer science research. The two that immediately come to mind are Google and Microsoft. They seem to be the closest thing we have to Bell Labs these days. If I manage to do that, my job will basically be learning. That would be nice.</p>
+
+<p>Otherwise, the key to learning is to be interested. I think anyone who is doing computer science out of a genuine interest in the subject matter, not just because they think it will make them rich, or because they like computer games, will continue to learn. We’re lucky to be in an interesting field that is still in its infancy. Not only are things constantly changing, but that change is very public and easy to follow.</p>
+
+<p>I think, however, that this also has a tendency to lead to trendiness. As important as keeping up with the latest developments is, it’s also important to have enough of a sense of the past to be able to evaluate those developments. A lot of the new ideas in the popular computer science media world aren’t really that new. You can see from the arguments over NoSQL that where some see a new, fresh idea, others see an old bad idea that was rejected as inadequate years ago and is only resurfacing out of ignorance. The truth is probably somewhere in between, but it’s important to be able to understand the basic principles involved when looking at new technology. Without understanding, evaluation is impossible. If you can decide which of the constant onslaught of new things are worthwhile and which are a waste of time, keeping up with the important stuff becomes impossible.</p>
+
+<p>Similarly, a good understanding of basic CS theory makes learning those new technologies or languages once they’re revealed as worthwhile far easier. Here again I believe that a real interest in computer science is the difference between learning these basic things so that they’re available for use in the future, and just memorizing things in order to pass a test and then wiping the slate clean for the next class. It’s a real problem with computer science that if you don’t really like it and enjoy learning about it, the ceiling on even programming ability is pretty low. I think this is part of the reason that we have so much really terrible software being made.</p>
+
+<p>That’s really all I have to say about that subject, so I’m just going to pad out the rest of the five hundred words by adding that practice in new areas is critically important. After curiosity, the next biggest driver of learning is necessity. Trying to accomplish things in unfamiliar parts of the field for fun will drive a lot of learning. You can’t do something if you don’t know how, so the decision to do necessitates the rest. Because of this it’s important to branch out and try new things.</p>
+
+<hr />
+
 <h4>04-10-2013 IEEE</h4>
 
 <h5>A</h5>
